rust/transpiler/tests/errors/block_in_paragraph.hyper
<p>
    <div>This is invalid HTML</div>
</p>
